chore: change folder structure and css file name

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -34,6 +34,7 @@
     "./tailwind.config": "./tailwind.config.ts",
     "./components/*": "./src/components/*.tsx",
     "./lib/*": "./src/lib/*.ts",
+    "./styles/*": "./src/styles/*",
     "./hooks/*": [
       "./src/hooks/*.ts",
       "./src/hooks/*.tsx"
